--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="{{ url_for('static', filename='assets/openfeed.ico') }}" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hall of Fame - Openfeed</title>
+    <title>Openfeed</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -623,7 +624,7 @@
         <div class="navbar-content">
             <div class="navbar-brand">
                 <span class="brand-icon"><i class="fas fa-bolt"></i></span>
-                <span class="brand-text">openfeed</span>
+                <span class="brand-text">openfeed..</span>
             </div>
             <button class="feedback-trigger-btn" id="feedbackBtn">
                 <i class="fas fa-plus"></i>
