--- a/templates/index.html
+++ b/templates/index.html
@@ -881,7 +881,7 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
+        <div class="footer-botto
             <p>&copy; 2026 OpenFeedback. All rights reserved.</p>
         </div>
     </footer>
